--- a/FansArea/Base.lproj/Main.storyboard
+++ b/FansArea/Base.lproj/Main.storyboard
@@ -108,13 +108,12 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="724"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <view key="tableHeaderView" contentMode="scaleToFill" misplaced="YES" id="e8T-sH-K7w">
-                            <rect key="frame" x="0.0" y="0.0" width="375" height="312"/>
+                        <view key="tableHeaderView" contentMode="scaleToFill" id="e8T-sH-K7w">
+                            <rect key="frame" x="0.0" y="0.0" width="375" height="300"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <subviews>
-                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="zSz-1w-FJz">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="312"/>
-                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="zSz-1w-FJz">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="300"/>
                                 </imageView>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tBv-Ay-9qo">
                                     <rect key="frame" x="325" y="10" width="40" height="40"/>
@@ -155,15 +154,19 @@
                             </subviews>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
+                                <constraint firstAttribute="trailing" secondItem="zSz-1w-FJz" secondAttribute="trailing" id="0IP-Q5-6Wl"/>
                                 <constraint firstAttribute="trailing" secondItem="tBv-Ay-9qo" secondAttribute="trailing" constant="10" id="4QF-XN-jDF"/>
+                                <constraint firstItem="zSz-1w-FJz" firstAttribute="top" secondItem="e8T-sH-K7w" secondAttribute="top" id="GL4-Pe-I2h"/>
+                                <constraint firstAttribute="bottom" secondItem="zSz-1w-FJz" secondAttribute="bottom" id="N4a-3e-vqz"/>
                                 <constraint firstItem="tBv-Ay-9qo" firstAttribute="top" secondItem="e8T-sH-K7w" secondAttribute="top" constant="10" id="N9R-aZ-243"/>
+                                <constraint firstItem="zSz-1w-FJz" firstAttribute="leading" secondItem="e8T-sH-K7w" secondAttribute="leading" id="rIW-xs-0uW"/>
                                 <constraint firstItem="fa8-eq-77o" firstAttribute="top" secondItem="tBv-Ay-9qo" secondAttribute="bottom" constant="8" symbolic="YES" id="sT1-63-Yni"/>
                                 <constraint firstItem="fa8-eq-77o" firstAttribute="leading" secondItem="tBv-Ay-9qo" secondAttribute="leading" id="zHu-u9-sLX"/>
                             </constraints>
                         </view>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="DetailCell" id="GIH-Ly-HRl" customClass="DetailTableViewCell" customModule="FansArea" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="340" width="375" height="44"/>
+                                <rect key="frame" x="0.0" y="328" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="GIH-Ly-HRl" id="aEC-Gw-zNH">
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
@@ -689,6 +692,7 @@
                 <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="ljS-nq-X69" sceneMemberID="viewController">
                     <toolbarItems/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="fkY-cT-AbM">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
